[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc2md"
version = "1.0"
description = "Convert Claude Code or Codex chat sessions to Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "codex", "claude-code", "markdown", "chat", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
cc2md = "cc2md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
